# EDOS-DETECTION-KIT

./: .gitignore  SETUP.md  ashish_backend_update.txt  ml_integration_test.py  package-lock.json  package.json  skill_assessment.ipynb  traffic_generator.py  tsconfig.json
app/: layout.tsx  simple-backup.css  simple.css
app/alerts/: page.tsx  page_backup.tsx
backend/: edos_security.db  init_database.py  main.py  pyproject.toml  security_dashboard.db  test_alert_generation.py  test_redis_consumer.py  test_redis_predictions.py
backend/app/: database.py  ml_integration_strategy.py
backend/app/api/: alerts.py  alerts_new.py  alerts_old_backup.py  live_monitoring.py  ml_integration.py  network_analysis.py  network_events.py  supabase_auth.py  websockets.py
backend/app/core/: config.py  websocket_manager.py
backend/app/models/: database.py
backend/app/services/: data_generator.py  message_duplicator.py  ml_processor.py  network_processor.py  redis_consumer.py  redis_consumer.py.backup
backend/app/utils/: pydantic_compat.py
backend/ml/: Dockerfile  README.md  beast_mode_api.py  beast_mode_inference.py  publisher.py
backend/ml/conf/: config.yaml
backend/ml/data/04_feature/: feature_scaler.pkl  feature_validation_stats.json
backend/network-monitor/: README.md  main.py  requirements.txt
backend/scripts/: grant_privileges.sql  setup_dev_environment.py
cicflowmeter/: pyproject.toml
components/: coming-soon.tsx  page.tsx  resource-context.tsx  resource-switcher.tsx  sidebar.tsx  threat-map.tsx  use-resource-data.tsx
docs/: openapi-springboot.yaml
(+20 files in other folders)
